--- a/index.html
+++ b/index.html
@@ -10,29 +10,58 @@
     <h1 id="encabezado">Ejercicios </h1>
     <main class="container">
       <ul class="list-group">
-        <li class="list-group-item">Ejercicio #1</li>
+        <li class="list-group-item">Ejercicio #1 Devuelve el mayor de una lista de números</li>
         <p id="resultEjercicio1"></p>
         <button id="btnExecute1" type="button" class="btn btn-primary">Ejecutar</button>
         <p>NOTA: Si desea cambiar la serie, abra la consola e ingrese "serieNum = [x,x,x,x]" enter</p>
-        <li class="list-group-item">Ejercicio #2</li>
+        <li class="list-group-item">Ejercicio #2 Devuelve el menor de una lista de números</li>
         <p id="resultEjercicio2"></p>
         <button id="btnExecute2" type="button" class="btn btn-primary">Ejecutar</button>
         <p>NOTA: Si desea cambiar la serie, abra la consola e ingrese "serieNum2 = [x,x,x,x]" enter</p>
-        <li class="list-group-item">Ejercicio #3</li>
+        <li class="list-group-item">Ejercicio #3 Devuelve el numero que se repita en la lista</li>
         <p id="resultEjercicio3"></p>
         <button id="btnExecute3" type="button" class="btn btn-primary">Ejecutar</button>
         <p>NOTA: Si desea cambiar la serie, abra la consola e ingrese "serieNum3 = [x,x,x,x]" enter</p>
-        <li class="list-group-item">Ejercicio #4</li>
+        <li class="list-group-item">Ejercicio #4 Devuelve de manera desordenada una lista de numeros</li>
         <p id="resultEjercicio4"></p>
         <button id="btnExecute4" type="button" class="btn btn-primary">Ejecutar</button>
         <p>NOTA: Si desea cambiar la serie, abra la consola e ingrese "serieNum4 = [x,x,x,x]" enter</p>
       </ul>
-    </main>      
+    </main> 
+    <br>
+    <section class="container">
+      <form>
+        <h3>Ejercicio 5.1 Devuelve mayor de 3 números entre 0 y 100 ingresados por el usuario</h3>
+        <div class="form-row">
+          <div class="col">
+            <input id="inputNum1" type="text" class="form-control" placeholder="Ingrese numero 1">
+            <div class="invalid-feedback">
+              Porfavor ingrese un numero entre 0 y 100
+            </div>
+          </div>
+          <div class="col">
+            <input id="inputNum2" type="text" class="form-control" placeholder="Ingrese numero 2">
+            <div class="invalid-feedback">
+              Porfavor ingrese un numero entre 0 y 100
+            </div>
+          </div>
+          <div class="col">
+            <input id="inputNum3" type="text" class="form-control" placeholder="Ingrese numero 3">
+            <div class="invalid-feedback">
+              Porfavor ingrese un numero entre 0 y 100
+            </div>
+          </div>
+        </div>
+      </form>
+      <p id="resultEjercicio5_1"></p>
+        <button id="btnExecute5_1" type="button" class="btn btn-primary">Ejecutar</button>
+    </section>     
     
     <script src="./js/ejercicio1.js"></script> 
     <script src="./js/ejercicio2.js"></script>
     <script src="./js/ejercicio3.js"></script>
     <script src="./js/ejercicio4.js"></script>
+    <script src="./js/ejercicio5_1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
   </body>
