--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <br>
     <section class="container">
       <form>
-        <h3>Ejercicio 5.1 Devuelve menor de 3 números entre 0 y 100 ingresados por el usuario</h3>
+        <h3>Ejercicio 5.1 Devuelve si un numero es la suma de los otros 2, a partir de 3 numeros ingresador por el usuario </h3>
         <div class="form-row">
           <div class="col">
             <input id="inputNum1" type="text" class="form-control" placeholder="Ingrese numero 1">
@@ -61,7 +61,7 @@
     <script src="./js/ejercicio2.js"></script>
     <script src="./js/ejercicio3.js"></script>
     <script src="./js/ejercicio4.js"></script>
-    <script src="./js/ejercicio5_2.js"></script>
+    <script src="./js/ejercicio5_5.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
   </body>
