--- a/index.html
+++ b/index.html
@@ -31,27 +31,15 @@
     <br>
     <section class="container">
       <form>
-        <h3>Ejercicio 5.1 Devuelve menor de 3 números entre 0 y 100 ingresados por el usuario</h3>
+        <h3>Ejercicio 5.1 Devuelve si un numero introducido por el usuario entre 100 y 200 es multiplo de 3</h3>
         <div class="form-row">
           <div class="col">
             <input id="inputNum1" type="text" class="form-control" placeholder="Ingrese numero 1">
             <div class="invalid-feedback">
-              Porfavor ingrese un numero entre 0 y 100
+              Porfavor ingrese un numero entre 100 y 200
             </div>
           </div>
-          <div class="col">
-            <input id="inputNum2" type="text" class="form-control" placeholder="Ingrese numero 2">
-            <div class="invalid-feedback">
-              Porfavor ingrese un numero entre 0 y 100
-            </div>
-          </div>
-          <div class="col">
-            <input id="inputNum3" type="text" class="form-control" placeholder="Ingrese numero 3">
-            <div class="invalid-feedback">
-              Porfavor ingrese un numero entre 0 y 100
-            </div>
-          </div>
-        </div>
+         </div>
       </form>
       <p id="resultEjercicio5_1"></p>
         <button id="btnExecute5_1" type="button" class="btn btn-primary">Ejecutar</button>
@@ -61,7 +49,7 @@
     <script src="./js/ejercicio2.js"></script>
     <script src="./js/ejercicio3.js"></script>
     <script src="./js/ejercicio4.js"></script>
-    <script src="./js/ejercicio5_2.js"></script>
+    <script src="./js/ejercicio5_4.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
   </body>
