--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <br>
     <section class="container">
       <form>
-        <h3>Ejercicio 5.1 Devuelve si un numero introducido por el usuario entre 100 y 200 es multiplo de 3</h3>
+        <h3>Ejercicio 5.1 Devuelve si un numero es par o impar</h3>
         <div class="form-row">
           <div class="col">
             <input id="inputNum1" type="text" class="form-control" placeholder="Ingrese numero 1">
             <div class="invalid-feedback">
-              Porfavor ingrese un numero entre 100 y 200
+              Porfavor ingrese un numero mayor a 0
             </div>
           </div>
          </div>
@@ -49,7 +49,7 @@
     <script src="./js/ejercicio2.js"></script>
     <script src="./js/ejercicio3.js"></script>
     <script src="./js/ejercicio4.js"></script>
-    <script src="./js/ejercicio5_4.js"></script>
+    <script src="./js/ejercicio5_6.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
   </body>
